attached_assets/Pasted--Configuring-done-0-0s-Generating-done-0-0s-6-Building-CXX-object-CMakeFiles-ai-lang-1743587453792.txt
-- Configuring done (0.0s)
-- Generating done (0.0s)
[  6%] Building CXX object CMakeFiles/ai_language_lib.dir/src/interpreters/RLInterpreter.cpp.o
/home/runner/workspace/ai_language/src/interpreters/RLInterpreter.cpp: In member function ‘virtual void ai_language::RLInterpreter::handleCreateCommand(const std::vector<std::__cxx11::basic_string<char> >&)’:
/home/runner/workspace/ai_language/src/interpreters/RLInterpreter.cpp:72:37: error: qualified-id in declaration before ‘(’ token
   72 | void RLInterpreter::handleAddCommand(const std::vector<std::string>& args) {
      |                                     ^
/home/runner/workspace/ai_language/src/interpreters/RLInterpreter.cpp:97:40: error: qualified-id in declaration before ‘(’ token
   97 | void RLInterpreter::handleCreateCommand(const std::vector<std::string>& args) {
      |                                        ^
/home/runner/workspace/ai_language/src/interpreters/RLInterpreter.cpp:110:38: error: qualified-id in declaration before ‘(’ token
  110 | void RLInterpreter::handleLoadCommand(const std::vector<std::string>& args) {
      |                                      ^
/home/runner/workspace/ai_language/src/interpreters/RLInterpreter.cpp:129:37: error: qualified-id in declaration before ‘(’ token
  129 | void RLInterpreter::handleSetCommand(const std::vector<std::string>& args) {
      |                                     ^
/home/runner/workspace/ai_language/src/interpreters/RLInterpreter.cpp:146:39: error: qualified-id in declaration before ‘(’ token
  146 | void RLInterpreter::handleTrainCommand(const std::vector<std::string>& args) {
      |                                       ^
/home/runner/workspace/ai_language/src/interpreters/RLInterpreter.cpp:159:42: error: qualified-id in declaration before ‘(’ token
  159 | void RLInterpreter::handleEvaluateCommand(const std::vector<std::string>& args) {
      |                                          ^
/home/runner/workspace/ai_language/src/interpreters/RLInterpreter.cpp:174:38: error: qualified-id in declaration before ‘(’ token
  174 | void RLInterpreter::handleShowCommand(const std::vector<std::string>& args) {
      |                                      ^
/home/runner/workspace/ai_language/src/interpreters/RLInterpreter.cpp:201:38: error: qualified-id in declaration before ‘(’ token
  201 | void RLInterpreter::handleSaveCommand(const std::vector<std::string>& args) {
      |                                      ^
/home/runner/workspace/ai_language/src/interpreters/RLInterpreter.cpp:214:38: error: qualified-id in declaration before ‘(’ token
  214 | void RLInterpreter::handleHelpCommand() {
      |                                      ^
/home/runner/workspace/ai_language/src/interpreters/RLInterpreter.cpp: At global scope:
/home/runner/workspace/ai_language/src/interpreters/RLInterpreter.cpp:229:2: error: expected ‘}’ at end of input
  229 | } // namespace ai_language
      |  ^
/home/runner/workspace/ai_language/src/interpreters/RLInterpreter.cpp:5:23: note: to match this ‘{’
    5 | namespace ai_language {
      |                       ^
make[2]: *** [CMakeFiles/ai_language_lib.dir/build.make:118: CMakeFiles/ai_language_lib.dir/src/interpreters/RLInterpreter.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:88: CMakeFiles/ai_language_lib.dir/all] Error 2
make: *** [Makefile:91: all] Error 2